--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 01</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header class="banner-img">
+        <div class="banner">
+            <h3 class="banner-h3">Happy New Year</h3>
+            <h2 class="banner-h2">New Year Party <br>Celebration</h2>
+    </div>  
+    </header>
+    <main>
+        <div class="some-text">
+            <h2 class="text-h2">65% OFF</h2>
+            <h3 class="text-h3">OUR HOLIDAY DEALS ARE BETTER</h3>
+            <h3 class="text-h3-2">ALL CATEGORIES</h3>
+
+        </div>
+        <div class="water-img">
+            <img src="images/New Year Photo.png" alt="">
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
