second banner complete

--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
     </div>  
     </header>
     <main>
-        <div class="some-text">
-            <h2 class="text-h2">65% OFF</h2>
-            <h3 class="text-h3">OUR HOLIDAY DEALS ARE BETTER</h3>
-            <h3 class="text-h3-2">ALL CATEGORIES</h3>
-
+        <div class="huday-text">
+            <div class="some-text">
+                <h2 class="text-h2">65% OFF</h2>
+                <h3 class="text-h3">OUR HOLIDAY DEALS ARE BETTER</h3>
+                <h3 class="text-h3-2">ALL CATEGORIES</h3>
+    
+            </div>
+            <div>
+                <img class="water-img" src="images/New Year Photo.png" alt="">
+            </div>
         </div>
-        <div class="water-img">
-            <img src="images/New Year Photo.png" alt="">
+        <div class="banner-img-2">
+            <div class="banner-content-2">
+                <h2 class="tittle">Welcome to <br>midnight party</h2>
+            <p class="tittle-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            <h3 class="btn">Join Now</h3>
+            </div>
         </div>
     </main>
     <footer></footer>
