--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
             <h3 class="btn">Join Now</h3>
             </div>
         </div>
+        <div class="gradient-section">
+            <div class="gs-content">
+                <div class="gs-h3">
+                    <h3 class="h3-p"><span class="sp">Place:</span> New Park Hotel</h3>
+                     <h3 class="h3-p"><span class="sp">Date:</span> 31 December Night 2023</h3>
+                     <h3 class="h3-p"><span class="sp">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                </div>
+                <button class="btn-2">JOIN NOW</button>
+            </div>
+        </div>
+
+        <div class="another-section">
+            <div class="as-1">
+                <h3 class="as-h3">NEW BEST OFFER</h3>
+                <h2 class="as-h2">Coming Soon</h2>
+                <p class="as-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="as-2">
+                <img class="as-2-img" src="images/Ellipse 1.png" alt="">
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
