--- a/index.html
+++ b/index.html
@@ -50,7 +50,25 @@
                 <p class="as-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="as-2">
-                <img class="as-2-img" src="images/Ellipse 1.png" alt="">
+                <div class="dot"><img class="as-2-img" src="images/Ellipse 1.png" alt=""></div>
+            </div>
+            <div class="as-3">
+                <h2 class="as-24">2024</h2>
+                <p class="as-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img class="img-as3" src="images/Group 96.png" alt="">
+            </div>
+        </div>
+        <div class="last-section">
+            <h3 class="l-h3">WHAT IS FUNCTIONAL</h3>
+            <h2 class="l-h2"><span class="l-c">Holidays</span> Sale 50%</h2>
+            <p class="l-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br>fermentum amet amet sit consectetur.</p>
+        </div>
+        <div class="critical">
+            <div class="critical-bar">
+                <img src="images/Rectangle 2.png" alt="">
+                <div class="jholmol">
+                    <img src="images/Group 75.png" alt="">
+                </div>
             </div>
         </div>
     </main>
