--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 01</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="banner-img">
         <div class="banner">
             <h3 class="banner-h3">Happy New Year</h3>
             <h2 class="banner-h2">New Year Party <br>Celebration</h2>
-    </div>  
+        </div>
     </header>
     <main>
         <div class="huday-text">
@@ -19,7 +21,7 @@
                 <h2 class="text-h2">65% OFF</h2>
                 <h3 class="text-h3">OUR HOLIDAY DEALS ARE BETTER</h3>
                 <h3 class="text-h3-2">ALL CATEGORIES</h3>
-    
+
             </div>
             <div>
                 <img class="water-img" src="images/New Year Photo.png" alt="">
@@ -28,16 +30,17 @@
         <div class="banner-img-2">
             <div class="banner-content-2">
                 <h2 class="tittle">Welcome to <br>midnight party</h2>
-            <p class="tittle-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
-            <h3 class="btn">Join Now</h3>
+                <p class="tittle-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    <br>malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <h3 class="btn">Join Now</h3>
             </div>
         </div>
         <div class="gradient-section">
             <div class="gs-content">
                 <div class="gs-h3">
                     <h3 class="h3-p"><span class="sp">Place:</span> New Park Hotel</h3>
-                     <h3 class="h3-p"><span class="sp">Date:</span> 31 December Night 2023</h3>
-                     <h3 class="h3-p"><span class="sp">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                    <h3 class="h3-p"><span class="sp">Date:</span> 31 December Night 2023</h3>
+                    <h3 class="h3-p"><span class="sp">Time:</span> Evening 7.30 pm to 12.30 am</h3>
                 </div>
                 <button class="btn-2">JOIN NOW</button>
             </div>
@@ -47,7 +50,8 @@
             <div class="as-1">
                 <h3 class="as-h3">NEW BEST OFFER</h3>
                 <h2 class="as-h2">Coming Soon</h2>
-                <p class="as-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="as-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
+                    Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="as-2">
                 <div class="dot"><img class="as-2-img" src="images/Ellipse 1.png" alt=""></div>
@@ -61,17 +65,84 @@
         <div class="last-section">
             <h3 class="l-h3">WHAT IS FUNCTIONAL</h3>
             <h2 class="l-h2"><span class="l-c">Holidays</span> Sale 50%</h2>
-            <p class="l-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br>fermentum amet amet sit consectetur.</p>
+            <p class="l-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>molestie malesuada.
+                Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br>fermentum amet amet
+                sit consectetur.</p>
         </div>
-        <div class="critical">
-            <div class="critical-bar">
-                <img src="images/Rectangle 2.png" alt="">
+        <div class="three">
+            <div class="three-pic">
                 <div class="jholmol">
-                    <img src="images/Group 75.png" alt="">
+                    <img class="jholmol-img" src="images/Group 75.png" alt="">
+                </div>
+                <div class="bedi-logo">
+                    <img class="logo" src="images/Group 44.png" alt="">
+                    <img class="bedi" src="images/Rectangle 1.png" alt="">
                 </div>
             </div>
+            <div class="bar">
+                <img class="bar-img" src="images/Rectangle 2.png" alt="">
+            </div>
         </div>
+        <section class="last-ap">
+            <h3 class="l-h3">THE BEST GIFTS</h3>
+            <h2 class="l-h2">Our Awesome Portfolio</h2>
+            <p class="l-ap">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+        </section>
+            <section class="last-img">
+                <div class="lip">
+                    <img src="images/Rectangle 3.png" alt="" class="lip-i">
+                    <img src="images/Rectangle 4.png" alt="" class="lip-i">
+                    <img src="images/Rectangle 5.png" alt="" class="lip-i">
+                </div>
+                <div class="lip">
+                    <img src="images/Rectangle 6.png" alt="" class="lip-i">
+                    <img src="images/Rectangle 7.png" alt="" class="lip-i">
+                    <img src="images/Rectangle 8.png" alt="" class="lip-i">
+                </div>
+            </section>
+            <section class="l-sec">
+                <div class="lsc">
+                        <img class="l-sec-img" src="images/Group 61.png" alt="">
+                    <h2 class="l-sec-h2">Subscribe Newsletter</h2>
+                    <p class="l-sec-p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+                <div class="text-btn">
+                    <input type="email" value="user@gmail.com" name="user@gmail.com" class="tbi">
+                    <button class="tbl">Subscribe</button>
+                </div>
+            </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="fl">
+            <div class="fl-l">
+                <div class="flp1">
+                    <p class="flpp" id="fld">44, Big Building Roosevelt Street
+                        <br>Beach Gardens Florida 33410</p>
+                </div>
+                <div class="flp2">
+                    <div class="fl-call">
+                        <img class="icon" src="images/Call.png" alt="">
+                    <p id="fld">+00 123 584 124</p>
+                    </div>
+                    <div class="fl-web">
+                        <img class="icon2" src="images/Website.png" alt="">
+                        <p id="fld" class="flddd">www.website.com</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="fl-logo">
+                <img src="images/Facebook.png" alt="" class="fll">
+                <img src="images/Instagram.png" alt="" class="fll">
+                <img src="images/Twitter.png" alt="" class="fll">
+                <img src="images/Linkedin.png" alt="" class="fll">
+            </div>
+            <hr>
+            <div class="atlast">
+                <p id="fld">2017, All Rights Reserved.</p>
+                <p id="fld" class="atlast-p">Unsubscribe</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
